--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <h1>Test</h1>
     <p>I love Cookies</p>
     <p>I love Cookies</p>
-    <p>I love Cookies 2</p>
+    <p>I love Cookies</p>
 </body>
 </html>
