--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheets" href="styles.ccs">
     <title>Document</title>
 </head>
 <body>
     <h1>Test</h1>
     <p>I love Cookies</p>
     <p>I love Cookies</p>
-    <p>I love Cookies</p>
+    <p>I love Cookies sometimes</p>
 </body>
 </html>
