--- a/index.html
+++ b/index.html
@@ -2,15 +2,34 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>Black Summoner</title>
 </head>
+<link rel="stylesheet" href="Black Summoner.css">
 <body>
-    <h1>Test</h1>
-    <p>I love Cookies</p>
-    <p>I love Cookies</p>
-    <p>I love Cookies sometimes</p>
+    
+    <br> <br> <br> <br> <br> <br> <br> <br>
+    <h2>
+        Kuro no Shoukanshi | Black Summoner
+                    <small>Staffel 1</small>
+    </h2>
+    <ul>
+        <a href="#" class="video-link" data-video="Black Summoner 1/1.mp4">1</a>
+        <a href="#" class="video-link" data-video="Black Summoner 1/2.mp4">2</a> 
+        <a href="#" class="video-link" data-video="Black Summoner 1/3.mp4">3</a>
+        <a href="#" class="video-link" data-video="Black Summoner 1/4.mp4">4</a>
+        <a href="#" class="video-link" data-video="Black Summoner 1/5.mp4">5</a>
+        <a href="#" class="video-link" data-video="Black Summoner 1/6.mp4">6</a>
+        <a href="#" class="video-link" data-video="Black Summoner 1/7.mp4">7</a>
+        <a href="#" class="video-link" data-video="Black Summoner 1/8.mp4">8</a>
+        <a href="#" class="video-link" data-video="Black Summoner 1/9.mp4">9</a>
+        <a href="#" class="video-link" data-video="Black Summoner 1/10.mp4">10</a>
+        <a href="#" class="video-link" data-video="Black Summoner 1/11.mp4">11</a>
+        <a href="#" class="video-link" data-video="Black Summoner 1/12.mp4">12</a>
+    </ul>
+    
+    <div id="video-container"></div>
 </body>
+<script src="script.js" defer></script>
+
 </html>
